# Portfolio

./: LICENSE  README.md
.github/workflows/: dbt-silver-cd.yml  dbt-silver-ci.yml  dbt-silver.yml  main.yml
src/CDC/: config.yml
src/Infrastructure/: AppServer.bicep  DataBronzeLayer.bicep  DeployInfrastructure.ps1
src/OLTP/: GeneratePolicyForge.py  PolicyForgeDDL.sql  PolicyForgeDML.sql  sample_query.sql  type_tables.yml
src/Orchestrator/: build_venv.sh  requirements.txt
src/Orchestrator/portfolio/: README.md  pyproject.toml  setup.cfg  setup.py
src/policy_forge_data_generator/: pyproject.toml
src/portfolio/: build_environment.sh  dagster_enable_daemon.sh  dagster_enable_server.sh  dbt_requirements.txt  dbt_silver_definitions.py  enable_dagster_daemon.sh  enable_dagster_server.sh  enable_dagster_service.sh  requirements.txt  workspace.yaml
src/portfolio/CDC/: SQL.py  cdc_definitions.py  config.yml  fetch_delta.py
src/portfolio/Infrastructure/: DataBronzeLayer.bicep  DeployInfrastructure.ps1  DeployInfrastructure.sh  SetupUsersPermissions.sh  build_environment.sh  config.yml  lakehouse.py  lakehouse.sql  setup_postgres.sh  setup_snowflake.py
src/portfolio/change_data_capture/: SQL.py  fetch_delta.py
src/portfolio/cloud_infrastructure/: azure_deploy_infrastructure.sh  (+7 more)
src/portfolio/policy_forge_data_generator/: PolicyForge.txt  PolicyForgeDDL.sql  PolicyForgeDML.sql  dagster_assets.py  dagster_definitions.py  definitions.py  flush_postgres.sh  generate_policy_forge.py  pfdg_definitions.py  pyproject.toml  setup_postgres.sh  upload_policy_forge_data.sh
(+59 files in other folders)
